# Chips

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  build.bat  qt.cmake  readme.md
code/demo/dysms-demo/src/main/java/com/leyou/demo/: SmsDemo.java
code/demo/http-demo/: pom.xml
code/demo/http-demo/src/test/java/com/leyou/httpdemo/: HttpDemoApplicationTests.java  HttpTests.java
code/demo/itcast-elasticsearch/src/main/java/cn/itcast/elasticsearch/pojo/: Item.java
code/demo/itcast-eureka/: pom.xml
code/demo/itcast-eureka/src/main/java/cn/itcast/eureka/: ItcastEurekaApplication.java
code/demo/itcast-eureka/src/main/resources/: application.yml
code/demo/itcast-eureka/src/test/java/cn/itcast/eureka/: ItcastEurekaApplicationTests.java
code/demo/itcast-rabbitmq/src/main/java/cn/itcast/rabbitmq/simple/: Recv.java
code/demo/itcast-rabbitmq/src/test/java/cn/itcast/rabbitmq/spring/: MqDemo.java
code/demo/itcast-service-consumer/: pom.xml
code/demo/itcast-service-consumer/src/main/java/cn/itcast/service/controller/: UserController.java
code/demo/itcast-service-consumer/src/test/java/cn/itcast/service/: RibbonLoadBalanceTest.java
code/demo/itcast-service-provider/src/main/java/cn/itcast/service/: ItcastServiceProviderApplication.java
code/demo/itcast-service-provider/src/main/java/cn/itcast/service/controller/: UserController.java
code/demo/itcast-service-provider/src/main/java/cn/itcast/service/service/: UserService.java
code/demo/itcast-service-provider/src/main/resources/: application.yml
code/demo/itcast-springboot/src/main/java/cn/itcast/springboot/: TestApplication.java
code/demo/itcast-springboot/src/main/java/cn/itcast/springboot/config/: JdbcConfiguration.java  JdbcProperties.java
code/demo/itcast-springboot/src/main/java/cn/itcast/springboot/controller/: HelloController.java
code/demo/itcast-user/src/main/java/cn/itcast/user/config/: WebMvcConfiguration.java
code/demo/itcast-user/src/main/java/cn/itcast/user/interceptor/: MyInterceptor.java
code/demo/itcast-user/src/main/java/cn/itcast/user/mapper/: UserMapper.java
code/demo/itcast-user/src/main/resources/: application.properties
code/demo/itcast-zuul/: pom.xml
code/springboot/itcast-elasticsearch/: pom.xml
code/springboot/itcast-elasticsearch/src/main/java/cn/itcast/elasticsearch/: ElasticsearchApplication.java  ItemRepository.java
code/springboot/itcast-elasticsearch/src/test/java/cn/itcast/elasticsearch/test/: ElasticsearchTest.java
code/springboot/itcast-rabbitmq/src/main/java/cn/itcast/rabbitmq/simple/: Recv2.java
code/springboot/itcast-service-consumer/src/main/java/cn/itcast/service/: ItcastServiceConsumerApplication.java
code/springboot/itcast-service-consumer/src/main/java/cn/itcast/service/client/: UserClient.java  UserClientFallback.java
code/springboot/itcast-service-provider/: pom.xml
code/springboot/itcast-springboot/: pom.xml
code/springboot/itcast-user/: pom.xml
code/springboot/itcast-zuul/src/main/java/cn/itcast/zuul/: ItcastZuulApplication.java
code/springboot/itcast-zuul/src/main/resources/: application.yml
code/springboot/spring-boot-2-springmvc/src/main/java/cn/itcast/user/: UserApplication.java
code/springboot/spring-boot-2-springmvc/src/main/resources/: application.properties
code/springboot/spring-boot-2-springmvc/src/main/resources/static/: common.js
code/springboot/springboot_1_firstly/: pom.xml
code/springboot/springboot_1_firstly/src/main/java/com/firstly/: Springboot1FirstlyApplication.java
code/springboot/springboot_1_firstly/src/main/java/com/firstly/controller/: test.java
code/springboot/springboot_2_user/: pom.xml
code/springboot/springboot_2_user/src/main/java/com/videostudy/springboot_2_user/: Springboot2UserApplication.java
code/springboot/springboot_2_user/src/main/resources/: application.yml
code/springboot/springboot_2_user/src/test/java/com/videostudy/springboot_2_user/: Springboot2UserApplicationTests.java
code/springboot/springcloud_3_provider/: pom.xml
code/springboot/springcloud_3_provider/src/main/java/com/springcloud_3_provider/: Springcloud3ProviderApplication.java
code/springboot/springcloud_3_provider/src/main/java/com/springcloud_3_provider/controller/: UserController.java
code/springboot/springcloud_3_provider/src/main/java/com/springcloud_3_provider/mapper/: UserMapper.java
code/springboot/springcloud_3_provider/src/main/java/com/springcloud_3_provider/pojo/: User.java
code/springboot/springcloud_3_provider/src/main/java/com/springcloud_3_provider/service/: UserService.java
code/springboot/springcloud_3_provider/src/main/resources/: application.yml
code/springboot/springcloud_4_consumer/: pom.xml
code/springboot/springcloud_4_consumer/src/main/java/com/springcloud_4_consumer/: Springcloud4ConsumerApplication.java
code/springboot/springcloud_4_consumer/src/main/java/com/springcloud_4_consumer/client/: UserClient.java  UserClientFallback.java
code/springboot/springcloud_4_consumer/src/main/java/com/springcloud_4_consumer/controller/: UserController.java
code/springboot/springcloud_4_consumer/src/main/java/com/springcloud_4_consumer/pojo/: User.java
code/springboot/springcloud_4_consumer/src/main/resources/: application.yml
code/springboot/springcloud_4_consumer/src/test/java/com/springcloud_4_consumer/: Springcloud4ConsumerApplicationTests.java
code/springboot/springcloud_5_eureka/: pom.xml
code/springboot/springcloud_5_eureka/src/main/java/com/springcloud_5_eureka/: Springcloud5EurekaApplication.java
code/springboot/springcloud_5_eureka/src/main/resources/: application.yml
code/springboot/springcloud_5_eureka/src/test/java/com/springcloud_5_eureka/: Springcloud5EurekaApplicationTests.java
src/app/: CMakeLists.txt  QtWidgetsApplication.ui  main.cpp
src/gui/: CMakeLists.txt  ChipsMainWindow.cpp  ChipsMainWindow.h  ChipsMainWindow.ui
src/gui/components/: ChipsRenderMdiArea.cpp  ChipsRenderMdiArea.h  ChipsRenderMdiArea.ui
src/render/: CMakeLists.txt  RenderArea.cpp  RenderArea.h
(+12 files in other folders)
